<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clipChildren="false"
    android:clipToPadding="false">

    <com.bharatmaps.android.maps.BharatMapView
        android:id="@+id/mapView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:bharatmaps_cameraZoom="16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingHorizontal="12dp"
        android:paddingTop="24dp"
        android:text="@string/status_idle"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/controlPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvStatus">

        <Button
            android:id="@+id/btnMyLocation"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#4C7DF6"
            android:text="@string/btn_my_location"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnRequestRoutes"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="12dp"
            android:layout_weight="1"
            android:background="#4C7DF6"
            android:text="@string/btn_routes"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnStartNavigation"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:background="#4C7DF6"
            android:text="@string/btn_start_navigation"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnStopNavigation"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#4C7DF6"
            android:text="@string/btn_stop_navigation"
            android:textColor="@color/white" />
    </LinearLayout>

    <!--
    <Button
        android:id="@+id/btnToggleUpin"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_margin="12dp"
        android:background="#4C7DF6"
        android:paddingHorizontal="12dp"
        android:text="Toggle U-Pin"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    -->

    <com.bharatmaps.android.ui.BharatMapsManeuverSign
        android:id="@+id/maneuverSign"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="12dp"
        android:orientation="vertical"
        app:bharatMapViewId="@id/mapView"
        app:iconColor="#4C7DF6"
        app:backgroundColor="#FFFFFF"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/controlPanel" />

    <com.bharatmaps.android.ui.BharatMapsManeuverDistanceLabel
        android:id="@+id/maneuverDistanceLabel"
        android:layout_width="80dp"
        android:layout_height="30dp"
        app:bharatMapViewId="@id/mapView"
        android:background="@drawable/rounded_white"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/maneuverSign"
        app:layout_constraintRight_toRightOf="@id/maneuverSign"
        app:layout_constraintTop_toBottomOf="@id/maneuverSign"
        android:layout_marginTop="12dp"
        />

    <com.bharatmaps.android.ui.BharatMapsTripTimeRemainingLabel
        android:id="@+id/tripTimeRemainingLabel"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:bharatMapViewId="@id/mapView"
        android:background="@drawable/rounded_white"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/maneuverSign"
        app:layout_constraintBottom_toBottomOf="@id/maneuverSign"
        android:layout_marginLeft="12dp"
        />

    <com.bharatmaps.android.ui.BharatMapsTripTimeArrivalLabel
        android:id="@+id/tripTimeArrivalLabel"
        android:layout_width="80dp"
        android:layout_height="30dp"
        app:bharatMapViewId="@id/mapView"
        android:background="@drawable/rounded_white"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/tripTimeRemainingLabel"
        app:layout_constraintRight_toRightOf="@id/tripTimeRemainingLabel"
        app:layout_constraintTop_toBottomOf="@id/tripTimeRemainingLabel"
        android:layout_marginTop="12dp"
        />

    <com.bharatmaps.android.ui.BharatMapsTripDistanceLabel
        android:id="@+id/tripDistanceLabel"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:bharatMapViewId="@id/mapView"
        android:background="@drawable/rounded_white"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/tripTimeRemainingLabel"
        app:layout_constraintTop_toTopOf="@id/maneuverSign"
        app:layout_constraintBottom_toBottomOf="@id/maneuverSign"
        android:layout_marginLeft="12dp"
        />

    <com.bharatmaps.android.ui.BharatMapsNextRoadNameLabel
        android:id="@+id/nextRoadLabel"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:bharatMapViewId="@id/mapView"
        android:background="@drawable/rounded_white"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tripTimeArrivalLabel"
        android:layout_margin="12dp"
        />

    <!--    Off route simulation
    <Button
        android:id="@+id/btnSimulateOffRoute"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_margin="12dp"
        android:background="#4C7DF6"
        android:paddingHorizontal="12dp"
        android:text="OFF ROUTE"
        android:elevation="0dp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/speedLabel"
        app:layout_constraintLeft_toLeftOf="parent" />
        -->

    <com.bharatmaps.android.ui.BharatMapsSpeedLabel
        android:id="@+id/speedLabel"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:bharatMapViewId="@id/mapView"
        android:background="@drawable/circle_white"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:fontFamily="@font/avenir_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="24dp"
        />

    <com.bharatmaps.android.ui.BharatMapsTripEndView
        android:id="@+id/tripEndView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:bharatMapViewId="@id/mapView"
        app:buttonTextSize="16dp"
        app:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/controlPanel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.bharatmaps.android.ui.BharatMapsRouteSelector
        android:id="@+id/routeSelector"
        android:layout_width="0dp"
        android:layout_height="88dp"
        android:padding="12dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:bharatMapViewId="@id/mapView"
        app:borderRadius="12dp"
        app:buttonColor="#F1F1F1"
        app:buttonColor_active="#4C7DF6"
        app:buttonPadding="12dp"
        app:gap="12dp"
        app:textColor="#000000"
        app:textColor_active="#FFFFFF"
        app:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/controlPanel" />

    <ImageView
        android:id="@+id/navigationIndicator"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="6dp"
        android:padding="12dp"
        android:src="@drawable/nav_bar_navi_icon"
        app:tint="#4C7DF6"
        android:tint="#4C7DF6"
        app:bharatMapViewId="@id/mapView"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
